<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/contacto_content_top"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_contacto_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_contacto"
        android:hint="@string/contacto_h_nombre"/>

    <EditText
        android:id="@+id/et_contacto_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_contacto"
        android:hint="@string/contacto_h_correo"/>

    <EditText
        android:id="@+id/et_contacto_mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_contacto"
        android:minLines="4"
        android:maxLines="10"
        android:gravity="top"
        android:hint="@string/contacto_h_mensaje"/>

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_contacto"
        android:text="@string/contacto_h_enviar"/>
</LinearLayout>