<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.About">

    <TextView
        android:id="@+id/tv_about_proyecto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_tv_proyecto"
        android:gravity="center_horizontal"
        android:text="@string/tv_proyecto_mascotas"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_about_desarrollador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_about"
        android:gravity="center_horizontal"
        android:text="@string/tv_desarrollador"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_about"
        android:gravity="center_horizontal"
        android:text="@string/tv_version"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_about_curso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_about"
        android:gravity="center_horizontal"
        android:text="@string/tv_curso"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>